# example_package

./: .gitignore  LICENCE  README.md  pyproject.toml
examples/: main.py
src/example_package/: __init__.py  cli.py  counts.py  internal_counts.py
tests/: test_counts.py
